fix unrelated typo in translations

--- a/public/locales/en/offers.json
+++ b/public/locales/en/offers.json
@@ -1,5 +1,5 @@
 {
-  "Accommodation": "Accomodation",
+  "Accommodation": "Accommodation",
   "No guests.": "No guests.",
   "At most one guest.": "At most one guest.",
   "At most {{guestNumber}} guests.": "At most {{guestNumber}} guests.",
