Name i18next namespaces by modules (#1369)
introducing a new convention

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -6,13 +6,15 @@
 
 Use [`useTranslation`](https://react.i18next.com/latest/usetranslation-hook) hook in functional components.
 
+_A convention: Please use the current module name as i18next namespace. E.g. component within `modules/users` should have `useTranslation('users').`_
+
 ```jsx
 import React from 'react';
 import { useTranslation } from 'react-i18next';
 // import '@/config/client/i18n'; // sometimes you'll also need to import i18n config
 
 export default function MyComponent(props) {
-  const { t, i18n } = useTranslation('myNamespace');
+  const { t, i18n } = useTranslation('currentModule');
 
   return <div>I am a React component!</div>;
 }
@@ -24,7 +26,7 @@ Don't use class components, use [hooks](https://reactjs.org/docs/hooks-overview.
 
 ```jsx
 export function MyComponent() {
-  const { t } = useTranslation('myNamespace');
+  const { t } = useTranslation('currentModule');
 
   return <div>{t('I am a React component!')}</div>;
 }
@@ -32,17 +34,20 @@ export function MyComponent() {
 
 ### 3. If your strings include html, wrap them in [`Trans`](https://react.i18next.com/components/trans-component) component
 
+_Note: Please provide the current namespace to `Trans` component by passing `ns="currentModule"` and `t={t}` in props.
+@TODO remove the `ns` part when gilbsgilbs/babel-plugin-i18next-extract#153 gets resolved.)_
+
 ```jsx
 import { Trans, useTranslation } from 'react-i18next';
 
 export function MyComponent() {
-  const { t } = useTranslation('myNamespace');
+  const { t } = useTranslation('currentModule');
 
   return (
     <>
       <div>{t('I am a text to translate!')}</div>
       <div>
-        <Trans>
+        <Trans ns="currentModule" t={t}>
           I'm a text with <span>some</span> <a href="">html</a>.
         </Trans>
       </div>
