--- a/public/locales/en/contacts.json
+++ b/public/locales/en/contacts.json
@@ -1,4 +1,26 @@
 {
+  "(additional {{amount}} pending)": "(additional {{amount}} pending)",
+  "Cancel": "Cancel",
+  "Confirm Request": "Confirm Request",
+  "Connected since {{created, MMM D, YYYY}}": "Connected since {{created, MMM D, YYYY}}",
+  "Contact request sent and pending.": "Contact request sent and pending.",
+  "Decline Request": "Decline Request",
+  "Decline contact request?": "Decline contact request?",
+  "From <2>{{locationFrom}}</2>": "From <2>{{locationFrom}}</2>",
+  "Lives in <2>{{locationLiving}}</2>": "Lives in <2>{{locationLiving}}</2>",
+  "No contacts yet.": "No contacts yet.",
+  "One contact": "One contact",
+  "Remove contact?": "Remove contact?",
+  "Requested {{created, MMM D, YYYY}}": "Requested {{created, MMM D, YYYY}}",
+  "Revoke Request": "Revoke Request",
+  "Revoke contact request?": "Revoke contact request?",
+  "Since {{created, MMM D, YYYY}}": "Since {{created, MMM D, YYYY}}",
+  "Wait a moment...": "Wait a moment...",
+  "Yes, decline request": "Yes, decline request",
+  "Yes, remove contact": "Yes, remove contact",
+  "Yes, revoke request": "Yes, revoke request",
+  "You received a contact request.": "You received a contact request.",
+  "{{amount}} contacts": "{{amount}} contacts",
   "{{count}} contacts in common": "One contact in common",
   "{{count}} contacts in common_plural": "{{count}} contacts in common"
 }
