--- a/public/locales/en/tribes.json
+++ b/public/locales/en/tribes.json
@@ -10,6 +10,7 @@
   "Leave Tribe": "Leave Tribe",
   "Leave this Tribe?": "Leave this Tribe?",
   "Missing your Tribe?": "Missing your Tribe?",
+  "New tribe!": "New tribe!",
   "No members yet": "No members yet",
   "Send us suggestions!": "Send us suggestions!",
   "Sign up with Trustroots": "Sign up with Trustroots",
