--- a/public/locales/en/users.json
+++ b/public/locales/en/users.json
@@ -1,21 +1,43 @@
 {
-  "Member since {{date, MMM Do, YYYY}}": "Member since {{date, MMM Do, YYYY}}",
-  "Online {{date, fromNow}}": "Online {{date, fromNow}}",
-  "Online long ago": "Online long ago",
+  "About": "About",
   "About me": "About me",
-  "Show more...": "Show more...",
-  "Member has not written description about themself.": "Member has not written description about themself.",
-  "Your profile description should be longer so that you can send messages.": "Your profile description should be longer so that you can send messages.",
+  "Add contact": "Add contact",
+  "Change language": "Change language",
+  "Contacts": "Contacts",
+  "Delete contact request": "Delete contact request",
+  "Don't panic!": "Don't panic!",
+  "Edit your profile": "Edit your profile",
+  "Elsewhere": "Elsewhere",
   "Fill your profile": "Fill your profile",
-  "{{birthdate, age}} years": "{{birthdate, age}} years",
+  "From <1>{{locationFrom}}</1>": "From <1>{{locationFrom}}</1>",
+  "Help!": "Help!",
+  "Hosting": "Hosting",
+  "If you didn't receive the message, check your spam folder or resend it via<1>email settings</1>.": "If you didn't receive the message, check your spam folder or resend it via<1>email settings</1>.",
+  "Interface language": "Interface language",
+  "Languages": "Languages",
+  "Lives in <2>{{locationLiving}}</2>": "Lives in <2>{{locationLiving}}</2>",
+  "Member has not written description about themself.": "Member has not written description about themself.",
+  "Member since {{date, MMM Do, YYYY}}": "Member since {{date, MMM Do, YYYY}}",
+  "Online long ago": "Online long ago",
+  "Online {{ date, fromNow }}": "Online {{ date, fromNow }}",
+  "Open user profile for {{name}}": "Open user profile for {{name}}",
+  "Overview": "Overview",
+  "Remove contact": "Remove contact",
+  "Replies within {{replyTime, fromNow}}.": "Replies within {{replyTime, fromNow}}.",
+  "Reply rate {{replyRate}}.": "Reply rate {{replyRate}}.",
+  "Send a message": "Send a message",
+  "Sorry, you need to first activate your profile by confirming your email.": "Sorry, you need to first activate your profile by confirming your email.",
+  "Support": "Support",
+  "Thanks to all our community members who helped translate!": "Thanks to all our community members who helped translate!",
+  "This is the language of the interface you see across the site.": "This is the language of the interface you see across the site.",
+  "Tribes in common": "Tribes in common",
+  "Write a reference": "Write a reference",
+  "You can help us out!": "You can help us out!",
+  "Your profile description should be longer so that you can send messages.": "Your profile description should be longer so that you can send messages.",
   "female": "female",
   "male": "male",
   "non-binary": "non-binary",
   "other": "other",
-  "Reply rate {{replyRate}}.": "Reply rate {{replyRate}}.",
-  "Replies within {{replyTime, fromNow}}.": "Replies within {{replyTime, fromNow}}.",
-  "Lives in": "Lives in",
-  "From": "From",
-  "Languages": "Languages",
-  "Elsewhere": "Elsewhere"
+  "{{birthdate, age}} years": "{{birthdate, age}} years",
+  "“Everyone is necessarily the hero of their own life story.”": "“Everyone is necessarily the hero of their own life story.”"
 }
