--- a/public/locales/fi/pages.json
+++ b/public/locales/fi/pages.json
@@ -3,5 +3,5 @@
   "Please head over to our Team Guide to learn how to get started.": "",
   "Team Guide": "",
   "Trustroots needs developers, designers, people handling support queue, copywriting and much more.": "",
-  "Volunteering": "Dobrovolnictví"
+  "Volunteering": ""
 }
