--- a/public/locales/pl/contacts.json
+++ b/public/locales/pl/contacts.json
@@ -21,7 +21,7 @@
   "Yes, revoke request": "",
   "You received a contact request.": "",
   "{{amount}} contacts": "",
-  "{{count}} contacts in common_0": "Jeden společný kontakt",
-  "{{count}} contacts in common_1": "{{count}} společné kontakty",
-  "{{count}} contacts in common_2": "{{count}} společných kontaktů"
+  "{{count}} contacts in common_0": "",
+  "{{count}} contacts in common_1": "",
+  "{{count}} contacts in common_2": ""
 }
