--- a/public/locales/pl/offers.json
+++ b/public/locales/pl/offers.json
@@ -1,16 +1,22 @@
 {
   "Accommodation": "Mój dom",
-  "No guests.": "Nie przyjmuje gości",
   "At most {{count}} guests._0": "Maksymalnie jeden gość.",
   "At most {{count}} guests._1": "Maksymalnie {{count}} gości.",
+  "At most {{count}} guests._2": "",
+  "Bigger map": "Większa mapa",
   "Can host": "Przyjmuje gości",
-  "Might be able to host": "Może przyjmuje  gości",
   "Cannot host currently": "Nie przyjmuje gości",
+  "Change": "",
   "Hosting status: {{statusLabel}}": "Hosting status: {{statusLabel}}",
   "I can host": "Przyjmuję gości",
-  "I might be able to host": "Może przyjmuję gości",
   "I can't host currently": "Nie mogę gościć",
-  "Sorry, user is not hosting currently.": "Niestety użytkownik nie przyjmuje teraz gości",
+  "I might be able to host": "Może przyjmuję gości",
+  "Meet people": "",
+  "Might be able to host": "Może przyjmuje  gości",
+  "Modify hosting offer": "",
+  "No guests.": "Nie przyjmuje gości",
   "Offering hospitality and welcoming “strangers” to our homes strengthens our faith in each other.": "",
-  "Bigger map": "Większa mapa"
+  "Open on device": "",
+  "Sorry, user is not hosting currently.": "Niestety użytkownik nie przyjmuje teraz gości",
+  "Start hosting travellers": ""
 }
