--- a/public/locales/pl/references.json
+++ b/public/locales/pl/references.json
@@ -15,7 +15,7 @@
   "Recommendation": "",
   "Report this person to moderators": "",
   "See the reference from {{name}} to you.": "",
-  "Sorry, you can't give a reference to yourself.": "Promiň, sobě nemůžeš dát referenci.",
+  "Sorry, you can't give a reference to yourself.": "",
   "Submit": "",
   "They hosted me": "",
   "Wait a moment...": "",
@@ -23,7 +23,7 @@
   "Would you recommend others to host them?": "",
   "Would you recommend others to meet them?": "",
   "Would you recommend others to stay with them?": "",
-  "Yes": "Ano",
+  "Yes": "",
   "You've already given a reference to <1></1>.": "",
   "Your reference will become public when <1></1> gives you a reference back, or in {{daysToReply}} days.": ""
 }
