--- a/public/locales/pl/users.json
+++ b/public/locales/pl/users.json
@@ -1,30 +1,30 @@
 {
   "About": "",
-  "About me": "O mně",
+  "About me": "",
   "Add contact": "",
   "Change language": "",
   "Contacts": "",
   "Delete contact request": "",
   "Don't panic!": "",
   "Edit your profile": "",
-  "Elsewhere": "Jinde",
-  "Fill your profile": "Vyplň svůj profil.",
-  "From <1>{{locationFrom}}</1>": "Z <1>{{locationFrom}}</l>",
+  "Elsewhere": "",
+  "Fill your profile": "",
+  "From <1>{{locationFrom}}</1>": "",
   "Help!": "",
   "Hosting": "",
   "If you didn't receive the message, check your spam folder or resend it via<1>email settings</1>.": "",
   "Interface language": "",
-  "Languages": "Jazyky",
+  "Languages": "",
   "Lives in <2>{{locationLiving}}</2>": "",
-  "Member has not written description about themself.": "Člen o sobě ještě nic nenapsal.",
-  "Member since {{date, MMM Do, YYYY}}": "Členem od {{date, Do MMM YYYY}}",
-  "Online long ago": "Online dávno",
+  "Member has not written description about themself.": "",
+  "Member since {{date, MMM Do, YYYY}}": "",
+  "Online long ago": "",
   "Online {{ date, fromNow }}": "",
   "Open user profile for {{name}}": "",
   "Overview": "",
   "Remove contact": "",
-  "Replies within {{replyTime, fromNow}}.": "Odpovídá během {{replyTime, fromNow}}.",
-  "Reply rate {{replyRate}}.": "Míra odpovědí {{replyRate}}.",
+  "Replies within {{replyTime, fromNow}}.": "",
+  "Reply rate {{replyRate}}.": "",
   "Send a message": "",
   "Sorry, you need to first activate your profile by confirming your email.": "",
   "Support": "",
@@ -33,11 +33,11 @@
   "Tribes in common": "",
   "Write a reference": "",
   "You can help us out!": "",
-  "Your profile description should be longer so that you can send messages.": "Tvůj popis musí být delší, abys mohl/a posílat zprávy.",
-  "female": "žena",
-  "male": "muž",
-  "non-binary": "non-binary",
-  "other": "jiné",
-  "{{birthdate, age}} years": "{{birthdate, age}} let",
+  "Your profile description should be longer so that you can send messages.": "",
+  "female": "",
+  "male": "",
+  "non-binary": "",
+  "other": "",
+  "{{birthdate, age}} years": "",
   "“Everyone is necessarily the hero of their own life story.”": ""
 }
